# RTThreadSTM32BSP

./: cmake-ADD_CUSTOM_COMMAND.diff  cmakepy.diff
stm32f401ccu6-core-board/: .config  CMakeLists.txt  STM32F401xC.cfg  rtconfig.h  rtconfig.py
stm32f401ccu6-core-board/applications/: AT_BOOTUP.c  AT_CIFSR.c  AT_CIPMODE.c  AT_CIPSTART.c  AT_SUBSCRIBE.c  SerialPort.c  SerialPort.h  SerialPortService.c  SerialPortService_log.h  SerialPort_log.h  Utils.c  Utils.h  a.txt  main.c  main_log.h
stm32f401ccu6-core-board/board/: Kconfig  SConscript  board.c
stm32f401ccu6-core-board/board/CubeMX_Config/: .mxproject  CubeMX_Config.ioc
stm32f401ccu6-core-board/board/CubeMX_Config/Inc/: stm32f4xx_it.h
stm32f401ccu6-core-board/board/CubeMX_Config/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32f401ccu6-core-board/trash/: main.txt
